Added the SKR MINI E3 V2 configurations from my other computer

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = STM32F103RE_btt_USB
+default_envs = STM32F103RE_btt_USB  # STM32F103RC_btt_USB
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
